syntax = "proto3";

package gophkeeper;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/PrahaTurbo/goph-keeper/proto";

enum SecretType {
  UNSPECIFIED = 0;
  CREDENTIALS = 1;
  TEXT = 2;
  BINARY = 3;
  CARD = 4;
}

message CreateRequest {
  SecretType type = 1;
  string content = 2;
  string meta_data = 3;
}

message SecretData {
  int64 id = 1;
  SecretType type = 2;
  string content = 3;
  string meta_data = 4;
  google.protobuf.Timestamp createdAt = 5;
}

message GetSecretsRequest {}

message GetSecretsResponse {
  repeated SecretData secrets = 1;
}

message UpdateRequest {
  int64 secret_id = 1;
  SecretType type = 2;
  string content = 3;
  string meta_data = 4;
}

message DeleteRequest {
  int64 secret_id = 1;
}

service Secret {
  rpc Create(CreateRequest) returns (google.protobuf.Empty);
  rpc GetSecrets(GetSecretsRequest) returns (GetSecretsResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}